<resources>
    <string name="app_name">Iroha Android</string>
    <string name="to">To</string>
    <string name="amount">Amount</string>
    <string name="or">OR</string>
    <string name="qr_hint">Send via QR code</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="history">History</string>
    <string name="registration_title">I R O H A</string>
    <string name="registration_subtitle">Blockchain technologies for business</string>
    <string name="username_hint">Username (use small latin letters and digits)</string>
    <string name="button_register">Register</string>
    <string name="username_empty_error">Username can\'t be empty</string>
    <string name="username_already_exists_error">Username already exists</string>
    <string name="username_doesnt_exists">No such user</string>
    <string name="fields_cant_be_empty">Fields can not be empty</string>
    <string name="server_is_not_reachable">Server is not reachable</string>
    <string name="please_wait">Please, wait…</string>
    <string name="general_error">Problem with connection to server</string>
    <string name="logout">Logout</string>
    <string name="logout_description">Are you sure? Account will be lost</string>
    <string name="account_details">Account details</string>
    <string name="account_details_error">Failed to set account details</string>
    <string name="not_enough_balance_error">Not enough amount on balance</string>
    <string name="bio">Any details such as age, profession.</string>
    <string name="transaction_successful">Transaction successful.</string>
    <string name="qr_decode_successful">QR decode successful.</string>
    <string name="info">Info</string>
    <string name="loading">Loading</string>
    <string name="general_error_title">Sorry</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amount_error">You should enter sending amount</string>
    <string name="amount_is_zero_error">Amount should be greater then zero</string>
    <string name="insufficient_balance">Your haven\'t got enough IRH to send</string>
    <string name="qr_chooser_title">Scan QR from</string>
    <string name="scan_qr">Scan QR</string>
    <string name="scan_canceled">Scan canceled</string>
    <string name="select_qr">Select image</string>
    <string name="username_not_valid">Username should contain only a-z symbols</string>
    <string name="enter_invitation_code">Enter account details</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="future_transactions_will_appear_here">Future transactions will appear here</string>

    <string-array name="qr_dialog_array">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>
</resources>
